bk_ida/gobmkida/g2/owl_defend
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_defend/src/engine/owl.c:2270:12: error: use of undeclared identifier 'owl_0'
init_owl( &owl_0, target, 0, 0, 1); 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_defend/src/engine/owl.c:2271:7: error: use of undeclared identifier 'owl_0'
v15 = owl_0; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_defend/src/engine/owl.c:2273:23: error: use of undeclared identifier 'owl_0'
lunches_are_current = owl_0->lunches_are_current; 
                      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_defend/src/engine/owl.c:2274:20: error: use of undeclared identifier 'owl_0'
current_owl_data = owl_0; 
                   ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_defend/src/engine/owl.c:2277:7: error: use of undeclared identifier 'owl_0'
v33 = owl_0; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_defend/src/engine/owl.c:2278:19: error: use of undeclared identifier 'owl_0'
owl_find_lunches( owl_0); 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_defend/src/engine/owl.c:2289:7: error: use of undeclared identifier 'owl_0'
v19 = owl_0; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_defend/src/engine/owl.c:2292:18: error: use of undeclared identifier 'owl_0'
list_goal_worms( owl_0, &my_eye->color); 
                 ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_defend/src/engine/owl.c:2296:7: error: use of undeclared identifier 'owl_0'
v19 = owl_0; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_defend/src/engine/owl.c:2328:82: error: use of undeclared identifier 'owl_0'
store_persistent_owl_cache( 1, v4, 0, 0, result, move, v14, result_certain, v26, owl_0->goal, board[v4]); 
                                                                                 ^
10 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/owl_defend/src/obj/1/owl.o] Error 1
